deploy/kubernetes/kidsloop-auth-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-server
  namespace: kidskube-local
spec:
  selector:
    matchLabels:
      app: auth-server
  template:
    metadata:
      labels:
        app: auth-server
    spec:
      containers:
      - name: auth-server
        image: auth-server-tilt
        resources: {}
        ports:
        - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: auth-server
  namespace: kidskube-local
spec:
  selector:
    app: auth-server
  ports:
  - port: 8083
    targetPort: 8083

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-server-ingress
  namespace: kidskube-local
  annotations:
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/enable-cors: "true"
    kubernetes.io/ingress.class: "nginx"
    # cert-manager.io/issuer: "selfsigned"
    nginx.org/mergeable-ingress-type: "minion"
spec:
  rules:
  - host: fe.alpha.kidsloop.net
    http:
      paths:
      - pathType: Prefix
        path: "/auth-server"
        backend:
          service:
            name: auth-server
            port:
              number: 8083
